--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "tiny-emitter": "^2.1.0",
+    "vee-validate": "^4.6.6",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
